[gd_scene load_steps=5 format=3 uid="uid://dpudpvvrv7hy3"]

[ext_resource type="Theme" uid="uid://benc2fv0e5te2" path="res://Menus/main_menu.tres" id="1_uuaw3"]
[ext_resource type="Script" path="res://Menus/main_menu.gd" id="2_01yjk"]
[ext_resource type="AudioStream" uid="uid://djw6gnusn6co7" path="res://Peachtea - Somewhere in the Elevator.ogg" id="3_vo0oo"]

[sub_resource type="LabelSettings" id="LabelSettings_j7rj5"]
font_size = 64
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[node name="MainMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_uuaw3")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.956863, 0.796078, 0.270588, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 150)
layout_mode = 2
text = "Bubble Ranch: A Cozy Hunt"
label_settings = SubResource("LabelSettings_j7rj5")
horizontal_alignment = 1
autowrap_mode = 3

[node name="ButtonContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
script = ExtResource("2_01yjk")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="MarginContainer/VBoxContainer/ButtonContainer"]
position = Vector2(-32, -309)
stream = ExtResource("3_vo0oo")
volume_db = -10.0

[node name="Start" type="Button" parent="MarginContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_top = NodePath("../Exit")
focus_neighbor_bottom = NodePath("../Freeplay")
focus_next = NodePath("../Freeplay")
text = "Start Arcade"

[node name="Freeplay" type="Button" parent="MarginContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_top = NodePath("../Start")
focus_neighbor_bottom = NodePath("../Credits")
focus_next = NodePath("../Credits")
focus_previous = NodePath("../Start")
text = "Free Play"

[node name="Credits" type="Button" parent="MarginContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_top = NodePath("../Freeplay")
focus_neighbor_bottom = NodePath("../Exit")
focus_next = NodePath("../Exit")
focus_previous = NodePath("../Freeplay")
text = "Credits
"

[node name="Exit" type="Button" parent="MarginContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_top = NodePath("../Credits")
focus_neighbor_bottom = NodePath("../Start")
focus_next = NodePath("../Start")
text = "Exit
"

[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonContainer/Start" to="MarginContainer/VBoxContainer/ButtonContainer" method="_on_start_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonContainer/Freeplay" to="MarginContainer/VBoxContainer/ButtonContainer" method="_on_freeplay_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonContainer/Credits" to="MarginContainer/VBoxContainer/ButtonContainer" method="_on_credits_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonContainer/Exit" to="MarginContainer/VBoxContainer/ButtonContainer" method="_on_exit_pressed"]
